cmake_minimum_required(VERSION 3.27)
project(dm_demo VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8 /DUNICODE /D_UNICODE")
# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})

add_definitions(-DUNICODE -D_UNICODE)

add_subdirectory(src)

file(GLOB files ${CMAKE_SOURCE_DIR}/external/*)
foreach(file ${files})
    file(COPY ${file} DESTINATION ${CMAKE_BINARY_DIR})
endforeach()
